--- a/StartDS/StartDS.csproj
+++ b/StartDS/StartDS.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sensors\FileSystemSensor.cs" />
     <Compile Include="Sensors\Interfaces\ISensor.cs" />
+    <Compile Include="Sensors\ProcessorLoadingSensor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
