--- a/StartDS/StartDS.csproj
+++ b/StartDS/StartDS.csproj
@@ -85,13 +85,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EventTracking\EventTrackers\Tracked.cs" />
-    <Compile Include="EventTracking\MessageChains\Interfaces\ITrackedChain.cs" />
+    <Compile Include="EventTracking\EventTrackers\Token.cs" />
+    <Compile Include="EventTracking\MessageChains\Interfaces\ITokenChain.cs" />
     <Compile Include="EventTracking\MessageChains\SimpleChain.cs" />
     <Compile Include="EventTracking\EventTrackers\EventTracker.cs" />
     <Compile Include="EventTracking\EventTrackers\SimpleEventTracker.cs" />
     <Compile Include="EventTracking\EventTrackers\SimpleEventTrackerFactory.cs" />
     <Compile Include="EventTracking\EventTrackerStore.cs" />
+    <Compile Include="EventTracking\Observers\NotifyManager.cs" />
     <Compile Include="EventTracking\Observers\SimpleChangeManager.cs" />
     <Compile Include="EventTracking\Observers\Interfaces\IChangeManager.cs" />
     <Compile Include="EventTracking\Interfaces\IEventTracker.cs" />
@@ -99,7 +100,7 @@
     <Compile Include="EventTracking\Interfaces\IEventTrackerStore.cs" />
     <Compile Include="EventTracking\Observers\Interfaces\IObserver.cs" />
     <Compile Include="EventTracking\Observers\Interfaces\ISubject.cs" />
-    <Compile Include="EventTracking\Interfaces\ITracked.cs" />
+    <Compile Include="EventTracking\Interfaces\IToken.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sensors\FileSystemSensor.cs" />
